--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"firebase": "^4.6.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.15",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2"
